share overlap fix + hero image alinment

--- a/girleffect/static_src/site/patterns/00-atoms/wrappers/_wrappers.scss
+++ b/girleffect/static_src/site/patterns/00-atoms/wrappers/_wrappers.scss
@@ -37,7 +37,11 @@
     }
 
     &--article {
-        margin: 2rem auto 4rem;
+        margin: 0 auto;
+
+        @include media-query(tablet-landscape) {
+            margin: 2rem auto 4rem;
+        }
 
         > * {
             max-width: $body-width;
