--- a/girleffect/static_src/site/patterns/01-molecules/hero/_hero.scss
+++ b/girleffect/static_src/site/patterns/01-molecules/hero/_hero.scss
@@ -12,6 +12,22 @@
         }
     }
 
+    @include media-query(tablet-portrait) {
+      &--article-image {
+          position: relative;
+          padding-bottom: 50.632911392405063%; /* ratio of image height to width */
+          height: 0;
+          overflow: hidden;
+
+          img {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+          }
+      }
+    }
+
     &--search {
         background: url('../images/search-hero.png') no-repeat;
         background-size: cover;
@@ -105,7 +121,11 @@
         }
 
         &--top-space {
-            margin-top: 30px;
+            margin-top: 0;
+
+            @include media-query(container) {
+                margin-top: 1rem;
+            }
         }
     }
 
